adding social media meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,26 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  // Open Graph Meta Tags 
+  <meta name="description" content="Professional Web Designer and Developer" />
+  <meta property="og:title" content="Robiul H. (Personal Portfolio)" />
+  <meta property="og:url" content="https://robiul.dev" />
+  <meta property="og:image" content="%PUBLIC_URL%/robiulhr01 Professional Web Designer and Developer.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Personal Portfolio" />
+
+  // robot indexing
+  <meta name="robots" content="index, follow"> 
+  // twitter card
+  <meta name="twitter:card" content="Robiul H. (Personal Portfolio)">
+  <meta name=”twitter:site” content="@robiul">
+  <meta name=”twitter:creator” content="@robiul">
+  <meta name=”twitter:title” content="Robiul H. (Personal Portfolio)">
+  <meta name="twitter:description" content="Professional Web Designer and Developer">
+  <meta name="twitter:image" content="%PUBLIC_URL%/robiulhr01 Professional Web Designer and Developer.png">
+  // 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
