finelizing for now

--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,24 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  // Open Graph Meta Tags 
+  <!-- // Open Graph Meta Tags  -->
   <meta name="description" content="Professional Web Designer and Developer" />
   <meta property="og:title" content="Robiul H. (Personal Portfolio)" />
-  <meta property="og:url" content="https://robiul.dev" />
-  <meta property="og:image" content="%PUBLIC_URL%/robiulhr01 Professional Web Designer and Developer.png" />
+  <meta property="og:url" content="https://portfolio.robiul.dev" />
+  <meta property="og:image" content="https://portfolio.robiul.dev/static/media/img01.3fe177a6.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Personal Portfolio" />
 
-  // robot indexing
+  <!-- // robot indexing -->
   <meta name="robots" content="index, follow"> 
-  // twitter card
+  <!-- // twitter card -->
   <meta name="twitter:card" content="Robiul H. (Personal Portfolio)">
-  <meta name=”twitter:site” content="@robiul">
-  <meta name=”twitter:creator” content="@robiul">
-  <meta name=”twitter:title” content="Robiul H. (Personal Portfolio)">
+  <meta name="twitter:site" content="@robiul">
+  <meta name="twitter:creator" content="@robiul">
+  <meta name="twitter:title" content="Robiul H. (Personal Portfolio)">
   <meta name="twitter:description" content="Professional Web Designer and Developer">
-  <meta name="twitter:image" content="%PUBLIC_URL%/robiulhr01 Professional Web Designer and Developer.png">
-  // 
+  <meta name="twitter:image" content="https://portfolio.robiul.dev/static/media/img01.3fe177a6.jpg">
+  <!-- //  -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <!--
