fixing github deploy issue

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Professional Web Designer and Developer" />
   <meta property="og:title" content="Robiul H. (Personal Portfolio)" />
   <meta property="og:url" content="https://portfolio.robiul.dev" />
-  <meta property="og:image" content="https://portfolio.robiul.dev/static/media/img01.3fe177a6.jpg" />
+  <meta property="og:image" content="https://robiulhr.github.io/static/media/img01.3fe177a6.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Personal Portfolio" />
 
@@ -22,7 +22,7 @@
   <meta name="twitter:creator" content="@robiul">
   <meta name="twitter:title" content="Robiul H. (Personal Portfolio)">
   <meta name="twitter:description" content="Professional Web Designer and Developer">
-  <meta name="twitter:image" content="https://portfolio.robiul.dev/static/media/img01.3fe177a6.jpg">
+  <meta name="twitter:image" content="https://robiulhr.github.io/static/media/img01.3fe177a6.jpg">
   <!-- //  -->
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
